--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "threejs-portfolio",
-  "homepage": "https://muzamiliqbalganaie.github.io/muzamil-portfolio/",
   "version": "0.0.0",
   "private": true,
   "description": "A Three Js Portfolio AMde in Three Js",
@@ -12,9 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
